@@ -25,6 +25,8 @@ CFG=SURUNEXT - WIN32 UNICODE RELEASE
 
 # Begin Project
 # PROP AllowPerConfigDependencies 0
+# PROP Scc_ProjName ""
+# PROP Scc_LocalPath ""
 CPP=cl.exe
 MTL=midl.exe
 RSC=rc.exe
